--- a/boss.ini
+++ b/boss.ini
@@ -83,7 +83,7 @@ nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 플로란 개간지로 오세요
 
-bossname = 오염크루마
+bossname = 오크
 gentime = 08:00
 nogencheck = 0
 before_alert_ment = 입니다
@@ -191,7 +191,7 @@ nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 피의 늪지대로 오세요
 
-bossname = 망각의거울
+bossname = 망각
 gentime = 11:00
 nogencheck = 0
 before_alert_ment = 입니다
