--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 708413203368902736
 textchannel = 708368767838584837
 ladderchannel = 
 jungsanchannel = 
