--- a/boss.ini
+++ b/boss.ini
@@ -232,3 +232,27 @@ gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 상아탑 3층으로 오세요
+
+bossname = 실라
+gentime = 04:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 베오라의 유적 바람의 제단으로 오세요
+
+bossname = 무프
+gentime = 06:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 베오라의 유적 어둠의 제단으로 오세요
+
+bossname = 노르무스
+gentime = 08:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 베오라의 유적 대지의 제단으로 오세요
+
+bossname = 우칸바
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 베오라의 유적 물의 제단으로 오세요
