--- a/boss.ini
+++ b/boss.ini
@@ -256,3 +256,27 @@ gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 베오라의 유적 물의 제단으로 오세요
+
+bossname = 플린트
+gentime = 05:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 국립 묘지로 오세요
+
+bossname = 카브리오
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 국립 묘지로 오세요
+
+bossname = 하프
+gentime = 20:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 실렌의 봉인으로 오세요
+
+bossname = 안드라스
+gentime = 15:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 학살의 대지로 오세요
