--- a/fixed_boss.ini
+++ b/fixed_boss.ini
@@ -1,64 +1,56 @@
 -----고정보스-----
-오만 1층 - 람달
-오만 2층 - 마르딜 14시 / 20시
-오만 3층 - 케르논 15시 / 21시
+bossname = 셀리호든
+bosstime = 22:00
+genPeriod = 168:00
+startDate = 2020-07-31
+before_alert_ment = 입니다
+alert_ment = 입니다. 셀리호든의 봉인으로 오세요
 
+bossname = 셀리호든
+bosstime = 22:00
+genPeriod = 168:00
+startDate = 2020-08-01
+before_alert_ment = 입니다
+alert_ment = 입니다. 셀리호든의 봉인으로 오세요
 
+bossname = 람달
+bosstime = 13:00
+genPeriod = 24:00
+startDate = 2020-07-31
+before_alert_ment = 입니다
+alert_ment = 입니다. 오만의 탑 1층으로 오세요
 
+bossname = 람달
+bosstime = 19:00
+genPeriod = 24:00
+startDate = 2020-07-31
+before_alert_ment = 입니다
+alert_ment = 입니다. 오만의 탑 1층으로 오세요
 
+bossname = 마르딜
+bosstime = 14:00
+genPeriod = 24:00
+startDate = 2020-07-31
+before_alert_ment = 입니다
+alert_ment = 입니다. 오만의 탑 2층으로 오세요
 
+bossname = 마르딜
+bosstime = 20:00
+genPeriod = 24:00
+startDate = 2020-07-31
+before_alert_ment = 입니다
+alert_ment = 입니다. 오만의 탑 2층으로 오세요
 
+bossname = 케르논
+bosstime = 15:00
+genPeriod = 24:00
+startDate = 2020-07-31
+before_alert_ment = 입니다
+alert_ment = 입니다. 오만의 탑 3층으로 오세요
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+bossname = 케르논
+bosstime = 21:00
+genPeriod = 24:00
+startDate = 2020-07-31
+before_alert_ment = 입니다
+alert_ment = 입니다. 오만의 탑 3층으로 오세요
