--- a/fixed_boss.ini
+++ b/fixed_boss.ini
@@ -55,7 +55,16 @@ startDate = 2020-08-06
 before_alert_ment = 입니다
 alert_ment = 입니다. 오만의 탑 3층으로 오세요
 
+bossname = 월드보스
+bosstime = 12:00
+genPeriod = 24:00
+startDate = 2020-08-06
+before_alert_ment = 입니다
+alert_ment = 입니다. 피의 늪지대로 오세요
 
-
-
-
+bossname = 월드보스
+bosstime = 20:00
+genPeriod = 24:00
+startDate = 2020-08-06
+before_alert_ment = 입니다
+alert_ment = 입니다. 미스릴화살 따라가세요
