--- a/fixed_boss.ini
+++ b/fixed_boss.ini
@@ -67,4 +67,4 @@ bosstime = 20:00
 genPeriod = 24:00
 startDate = 2020-08-06
 before_alert_ment = 입니다
-alert_ment = 입니다. 미스릴화살 따라가세요
+alert_ment = 입니다. 처형터로 오세요
