--- a/fixed_boss.ini
+++ b/fixed_boss.ini
@@ -2,14 +2,21 @@
 bossname = 셀리호든
 bosstime = 22:00
 genPeriod = 168:00
-startDate = 2020-08-28
+startDate = 2020-08-24
 before_alert_ment = 입니다
 alert_ment = 입니다. 셀리호든의 봉인으로 오세요
 
 bossname = 셀리호든
 bosstime = 22:00
 genPeriod = 168:00
-startDate = 2020-08-22
+startDate = 2020-08-26
+before_alert_ment = 입니다
+alert_ment = 입니다. 셀리호든의 봉인으로 오세요
+
+bossname = 셀리호든
+bosstime = 22:00
+genPeriod = 168:00
+startDate = 2020-08-28
 before_alert_ment = 입니다
 alert_ment = 입니다. 셀리호든의 봉인으로 오세요
 
